--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -6,3 +6,7 @@
      | + 
     a(href='https://nodejs.org', target='_blank')
       img.txt-m(src='/images/nodejs_logo.png', width='46', alt='Node.js', title='Node.js')
+    span.h1.em-high.txt-m.mhl.type-neutral-4 
+     | + 
+    a(href='https://www.linkedin.com/in/hadesara', target='_blank')
+      img.txt-m(src='https://media.licdn.com/dms/image/C4E03AQGTfE0-Iop1kg/profile-displayphoto-shrink_200_200/0?e=1568246400&v=beta&t=tqyW2ZP1iOtO1Q48U2H2kFbVrnAku0daVKxhjGELq1s', width='46', alt='Hiren Adesara', title='Hiren Adesara')
